--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,110 @@
+
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+
+dist/
+build/
+
+
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+
+.pm2/
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+
+coverage/
+*.lcov
+
+
+.nyc_output
+
+
+node_modules/
+jspm_packages/
+
+
+.npm
+
+
+.node_repl_history
+
+
+*.tgz
+
+
+.yarn-integrity
+
+
+.env*
+
+
 .DS_Store
+.AppleDouble
+.LSOverride
+
+
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+
+*~
+
+
+.vscode/
+.idea/
+
+
+*.tmp
+*.temp
+*.swp
+*.swo
+
+
+*.zip
+*.tar.gz
+*.rar
+
+
+*.pem
+*.key
+*.crt
+*.csr
+
+
+*.db
+*.sqlite
+*.sqlite3
+
+
+.cache/
+.parcel-cache/
+
+
+*.backup
+*.bak
+
+
+.pm2/
+
+
+ecosystem.config.js
